deployments/ejwt/mock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-deployment
  namespace: kong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mock-pod
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mock-pod
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
